@@ -1,2 +1,4 @@
 Search QT5 Classes
 ./searchqt5classes
+show
+inall
