@@ -1,2 +1,4 @@
 Search QT6 Classes
 ./searchqt6classes
+show
+inall
