@@ -1,2 +1,4 @@
 Search In Gtk2 API's
 ./searchgtk2api
+show
+inall
