@@ -1,2 +1,4 @@
 Search In Gtk3 API's
 ./searchgtk3api
+show
+inall
