@@ -1,2 +1,4 @@
 Search In Gtk-Docs
 ./searchgtkdocsapi
+show
+inall
