@@ -1,2 +1,4 @@
 Search In QT5 API's
 ./searchqt5apis
+show
+inall
