@@ -1,2 +1,4 @@
 Search In QT6 API's
 ./searchqt6apis
+show
+inall
