@@ -1,0 +1,4 @@
+Search In DocSets
+./searchdocsets
+show
+notinall
