@@ -1,0 +1,67 @@
+#!/bin/bash
+
+#©keithhedger Fri 2 Aug 20:08:44 BST 2024 kdhedger68713@gmail.com
+
+DOCSETS=~/.local/share/Zeal/Zeal/docsets
+DBNAME=docSet.dsidx
+
+echo "Just Open"
+HTMLFILE="$2"
+:>"$HTMLFILE"
+
+echo "<!DOCTYPE html PUBLIC \"-//W3C//DTD HTML 4.01 Transitional//EN\">">>"$HTMLFILE"
+echo "<html>">>"$HTMLFILE"
+echo "<head>">>"$HTMLFILE"
+echo "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=UTF-8\">">>"$HTMLFILE"
+echo "</head>">>"$HTMLFILE"
+echo "<body>">>"$HTMLFILE"
+echo "<style>">>"$HTMLFILE"
+echo "dl { display: grid; grid-template-columns: max-content auto;}">>"$HTMLFILE"
+echo "dt {grid-column-start: 1;}">>"$HTMLFILE"
+echo "dd {grid-column-start: 2;}">>"$HTMLFILE"
+echo "</style>">>"$HTMLFILE"
+echo "<body>">>"$HTMLFILE"
+
+while read
+	do
+		dspath="${REPLY//"${DOCSETS}/"/}"
+		dsname=${dspath%%.?*}
+		foldname="$(dirname "$REPLY")"
+		echo "results from $dsname ..."
+		echo "<span style=\"font-weight: bold;\">Results From $dsname API's</span></font><dl>" >>"$HTMLFILE"
+		flag=0
+		while read ans
+			do
+				returns="$ans"		
+				if [[ ! "X$returns" = "X" ]];then
+					flag=1;
+
+					funcname="$(echo "$returns"|awk -F"|" '{print $1}')"
+					functype="$(echo "$returns"|awk -F"|" '{print $2}')"
+					funcpath="$(echo "$returns"|awk -F"|" '{print $3}')"
+					funcpath="${funcpath##?*>}"
+					case $functype in
+						"func")
+							functype="Function";;
+						"cl")
+							functype="Class";;
+						"clm")
+							functype="Member";;
+						"data")
+							functype="Property";;
+					esac
+
+					echo "<dt>${functype}</dt><dd><a href=\"file://${foldname}/Documents/$funcpath\">${funcname}</a></dd>" >>"$HTMLFILE"
+					echo "$funcname"
+				fi
+			done< <(sqlite3 "$REPLY" "select name,type,path from searchIndex where name REGEXP '"$1"';")
+
+			if [[ $flag -eq 1 ]];then
+				echo "</dl><br>">>"$HTMLFILE"
+			else
+				sed -i '$ d' "$HTMLFILE"
+			fi
+	done< <(find "$DOCSETS"  -mindepth 4 -maxdepth 4 -iname docSet.dsidx)
+
+	echo "</body>">>"$HTMLFILE"
+	echo "</html>">>"$HTMLFILE"
