@@ -19,6 +19,18 @@
 	<img moz-do-not-send="true" src="setcc.png" alt=""><br>
 	This command will be run asynchronously after replacing "%p" with the currently selected text, no output will be shown in the docviewer window..<br>
 	If you don't want a custom command to apear in the "Find API" menu, leave blank.<br>
+	<br>
+	The format of the *.info file is for example:<br>
+	Search In Gtk3 API's<br>
+	./searchgtk3api<br>
+	show<br>
+	inall<br>
+	<br>
+	Where:
+	'Search In Gtk3 API's' is the text shown in the 'Find API' menu.<br>
+	'./searchgtk3api' is the command to run ( relative to the DocumentationPlugin/actions folder ).<br>
+	'show' show this item in the 'Find API' menu ( or 'noshow' to not show ).<br>
+	'inall' include this search when using 'Run All Searches' ( or notinall to not include this search ).<br>
 	<br>More info to come ...<br>
   </body>
 </html>
